--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-@import url('https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css');
 
 :root {
   --primary-color: #da5c5c;
@@ -16,6 +15,7 @@ html, body {
 
 body {
   font-family: 'Open Sans', sans-serif;
+  background-color: rgb(245, 230, 210)
 }
 
 a {
